# coursework_5

./: .gitignore  README.md  main.py  pyproject.toml
src/: config.py  main.py
src/abstract_classes/: abstract_classes.py
src/api/: hh_api.py
src/database/: db_manager.py
src/utils/: file_utils.py
src/vacancies/: vacancy.py
